<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".presentation.fragments.PlayingSongFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purple_700"
        android:padding="@dimen/size_10">

        <ImageView
            android:id="@+id/backBtn"
            android:layout_width="@dimen/size_30"
            android:layout_height="@dimen/size_30"
            android:contentDescription="@string/go_back"
            android:src="@drawable/ic_baseline_arrow_back_ios_24"
            app:tint="@color/black" />

        <TextView
            android:id="@+id/songTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/size_5"
            android:layout_toEndOf="@+id/backBtn"
            android:gravity="center"
            android:maxLines="1"
            android:textAppearance="@style/titleTextBlack" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:background="@color/black" />

    <ImageView
        android:id="@+id/songPic"
        android:layout_width="@dimen/size_200"
        android:layout_height="@dimen/size_200"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/size_100"
        android:contentDescription="@string/app_logo"
        android:src="@drawable/logo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/size_20"
        android:padding="@dimen/size_20">

        <TextView
            android:id="@+id/songPosition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_00_00"
            android:textAppearance="@style/normalText" />


        <androidx.appcompat.widget.AppCompatSeekBar
            android:id="@+id/seekbar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:thumb="@drawable/seekbar_pointer" />

        <TextView
            android:id="@+id/songDuration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_00_00"
            android:textAppearance="@style/normalText" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_20"
        android:orientation="horizontal"
        android:padding="@dimen/size_10">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center">

            <ImageView
                android:id="@+id/previousSong"
                android:layout_width="@dimen/size_35"
                android:layout_height="@dimen/size_35"
                android:background="@drawable/play_icon_bg"
                android:contentDescription="@string/previous_song"
                android:rotation="180"
                android:src="@drawable/ic_forward_24" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center">

            <ImageView
                android:id="@+id/playSong"
                android:layout_width="@dimen/size_35"
                android:layout_height="@dimen/size_35"
                android:background="@drawable/play_icon_bg"
                android:contentDescription="@string/playpause"
                android:src="@drawable/ic_baseline_pause_24" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center">

            <ImageView
                android:id="@+id/forwardsSong"
                android:layout_width="@dimen/size_35"
                android:layout_height="@dimen/size_35"
                android:background="@drawable/play_icon_bg"
                android:contentDescription="@string/next_song"
                android:src="@drawable/ic_forward_24" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/size_10">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/favoriteImg"
                android:layout_width="@dimen/size_40"
                android:layout_height="@dimen/size_40"
                android:contentDescription="@string/favorite"
                android:background="@drawable/play_icon_bg"
                android:src="@drawable/ic_baseline_favorite_24"
                app:tint="@color/black" />

            <TextView
                android:id="@+id/favoriteCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/size_5"
                android:textAppearance="@style/normalText" />
        </LinearLayout>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/playList"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center">

            <ImageView
                android:layout_width="@dimen/size_40"
                android:layout_height="@dimen/size_40"
                android:background="@drawable/play_icon_bg"
                android:contentDescription="@string/playlist"
                android:src="@drawable/ic_baseline_playlist_play_24" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </LinearLayout>

</androidx.appcompat.widget.LinearLayoutCompat>