<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".presentation.fragments.ThumbPrintFragment">

    <ImageView
        android:layout_width="@dimen/size_100"
        android:layout_height="@dimen/size_100"
        android:contentDescription="@string/app_logo"
        android:src="@drawable/logo"
        app:layout_constraintBottom_toTopOf="@+id/graphTextureView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextureView
        android:id="@+id/graphTextureView"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_50"
        android:layout_marginBottom="@dimen/size_10"
        app:layout_constraintBottom_toTopOf="@+id/textureView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <!--    <TextView-->
    <!--        android:id="@+id/textView"-->
    <!--        android:layout_width="0dp"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginStart="@dimen/size_20"-->
    <!--        android:gravity="center_vertical"-->
    <!--        android:textAlignment="gravity"-->
    <!--        android:ellipsize="marquee"-->
    <!--        android:textSize="24sp"-->
    <!--        android:textStyle="bold"-->
    <!--        app:layout_constraintTop_toBottomOf="@id/graphTextureView"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintStart_toEndOf="@+id/textureView2" />-->

    <TextureView
        android:id="@+id/textureView"
        android:layout_width="@dimen/size_50"
        android:layout_height="@dimen/size_50"
        android:layout_marginBottom="@dimen/size_15"
        app:layout_constraintBottom_toTopOf="@+id/placeFingerTxt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/placeFingerTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scan_your_index_finger"
        android:textAppearance="@style/titleText"
        app:layout_constraintBottom_toTopOf="@+id/placeFingerImg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/placeFingerImg"
        android:layout_width="@dimen/size_200"
        android:layout_height="@dimen/size_200"
        android:layout_marginBottom="@dimen/size_30"
        android:contentDescription="@string/pulse_image"
        android:src="@drawable/scan_fingerprint"
        app:layout_constraintBottom_toTopOf="@+id/startLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/startLayout"
        android:layout_width="@dimen/size_100"
        android:layout_height="@dimen/size_100"
        android:elevation="1dp"
        app:cardCornerRadius="@dimen/size_50"
        app:layout_constraintBottom_toTopOf="@+id/guideline85H"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/purple_700"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/size_10">

            <com.airbnb.lottie.LottieAnimationView
                android:layout_width="@dimen/size_70"
                android:layout_height="@dimen/size_50"
                app:lottie_autoPlay="true"
                app:lottie_loop="true"
                app:lottie_rawRes="@raw/pulse" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start"
                android:textAppearance="@style/titleTextBlack" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline85H"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.85" />

</androidx.constraintlayout.widget.ConstraintLayout>